--- a/index.html
+++ b/index.html
@@ -7,3 +7,9 @@
 <br>
 <p style="text-align:center;">制作者 哔哩哔哩@TheColdWinter233 看猎奇补档站更新日志就关注一下吧。  我的博客：<a href="http://blog.cw-233.xyz">blog.cw-233.xyz</a></p>
 <br>
+  <p><strong>备注：红色代表猎奇部分过多 本网站完全公益</strong></p>
+  <hr>
+  <h2 style="color:red;">av10492 <a href="video/01.mp4">P1</a> <a href="video/02.mp4">P2</a> <a href="video/03.mp4">P3</a> <a href="video/04.mp4">P4</a> <a href="video/05.mp4">P5</a> <a href="video/06.mp4">P6</a> <a href="video/07.mp4">P7</a><a href="video/08.mp4">P8</a>
+  <hr>
+    <h2 style="color:red;">av10388 <a href="video/10388.mp4">P1</a></h2>
+    <hr>
