--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <br>
 <p style="text-align:center;">制作者 哔哩哔哩@TheColdWinter233 看猎奇补档站更新日志就关注一下吧。  我的博客：<a href="http://blog.cw-233.xyz">blog.cw-233.xyz</a></p>
 <br>
+  <p>技术QQ:3487524383, 视频大概会缓冲3~15秒，请耐心等待</p>
   <p><strong>备注：红色代表猎奇部分过多 本网站完全公益</strong></p>
   <hr>
   <h2>av23<a href="video/00000023.mp4">P1</a>
